--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.16",
-    "@astrojs/check": "^0.9.4",
-    "typescript": "^5.7.2"
+    "@astrojs/check": "0.9.4",
+    "@astrojs/tailwind": "5.1.2",
+    "@fontsource-variable/onest": "5.1.0",
+    "astro": "4.16.16",
+    "tailwindcss": "3.4.15",
+    "typescript": "5.7.2"
   },
-  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
+  "packageManager": "pnpm@9.5.0"
 }
